Change latest design

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/hotkeys.min.css"/>
+    <link rel="stylesheet" href="css/login.css"/>
     <link rel="stylesheet" href="css/style.css"/>
+
 
     <body>
 
